{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 528,
  "lineage": "1177b75b-16f8-e5b1-919a-635126fd7526",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ce74e7f899c5be8d",
            "domain": "vpc",
            "id": "eipalloc-03860bdaafd79620b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ce50773e4a84c380",
            "private_dns": "ip-10-0-1-189.ec2.internal",
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-34-224-248-166.compute-1.amazonaws.com",
            "public_ip": "34.224.248.166",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b6d9922a59c1e173",
            "domain": "vpc",
            "id": "eipalloc-0b05a3d0373647719",
            "instance": "i-06802b3db705f2ff6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06922bc2b012dfec8",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-54-162-66-92.compute-1.amazonaws.com",
            "public_ip": "54.162.66.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_network_interface.web-server01-nic-prod",
            "aws_security_group.allow_web",
            "aws_subnet.Prod01",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-061d026d07240cd3f",
            "domain": "vpc",
            "id": "eipalloc-04f11e7849c347f04",
            "instance": "i-03ca10908d4954a99",
            "network_border_group": "us-east-1",
            "network_interface": "eni-030aa73c60c5d343f",
            "private_dns": "ip-10-0-2-186.ec2.internal",
            "private_ip": "10.0.2.186",
            "public_dns": "ec2-35-171-49-234.compute-1.amazonaws.com",
            "public_ip": "35.171.49.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_network_interface.web-server02-nic-prod",
            "aws_security_group.allow_web",
            "aws_subnet.Prod02",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "Prod_ApplicationLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:269396186723:loadbalancer/csloadBalancer",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "csloadBalancer-186652808.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "csloadBalancer",
            "idle_timeout": 60,
            "instances": [
              "i-03ca10908d4954a99",
              "i-06802b3db705f2ff6"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:us-east-1:269396186723:certificate/8788c8c4-ef76-4d1a-a885-94d21adae0e1"
              }
            ],
            "name": "csloadBalancer",
            "security_groups": [
              "sg-020f7bcd1d3aa89d9"
            ],
            "source_security_group": "269396186723/terraform-example-elb",
            "source_security_group_id": "sg-020f7bcd1d3aa89d9",
            "subnets": [
              "subnet-025b700b1a8166f64",
              "subnet-0b01d82a0fb758593"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.webserverprod01",
            "aws_instance.webserverprod02",
            "aws_network_interface.web-server01-nic-prod",
            "aws_network_interface.web-server02-nic-prod",
            "aws_security_group.allow_web",
            "aws_security_group.elb",
            "aws_subnet.Prod01",
            "aws_subnet.Prod02",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserverprod01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:269396186723:instance/i-06802b3db705f2ff6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06802b3db705f2ff6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kpdevops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-06922bc2b012dfec8"
              }
            ],
            "primary_network_interface_id": "eni-06922bc2b012dfec8",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_ip": "10.0.1.103",
            "public_ip": "54.162.66.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8da560ea6d6a29f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b01d82a0fb758593",
            "tags": {
              "Name": "Prod-web-server-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c95d0dc08bc3a6b"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server01-nic-prod",
            "aws_security_group.allow_web",
            "aws_subnet.Prod01",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserverprod02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:269396186723:instance/i-03ca10908d4954a99",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ca10908d4954a99",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kpdevops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-030aa73c60c5d343f"
              }
            ],
            "primary_network_interface_id": "eni-030aa73c60c5d343f",
            "private_dns": "ip-10-0-2-186.ec2.internal",
            "private_ip": "10.0.2.186",
            "public_ip": "35.171.49.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e5547ab016b269e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025b700b1a8166f64",
            "tags": {
              "Name": "Prod-web-server-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c95d0dc08bc3a6b"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server02-nic-prod",
            "aws_security_group.allow_web",
            "aws_subnet.Prod02",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserverstaging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ddb0e5626798373",
            "arn": "arn:aws:ec2:us-east-1:269396186723:instance/i-0b967e7eb02de1737",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b967e7eb02de1737",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kpdevops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0fa38cdc6af32c507"
              }
            ],
            "primary_network_interface_id": "eni-0fa38cdc6af32c507",
            "private_dns": "ip-10-0-3-95.ec2.internal",
            "private_ip": "10.0.3.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043550b15cbb16f0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae075e35a719e5df",
            "tags": {
              "Name": "staging_web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c4df901ca12ec34"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic-staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269396186723:internet-gateway/igw-014505bf29720013f",
            "id": "igw-014505bf29720013f",
            "owner_id": "269396186723",
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03860bdaafd79620b",
            "id": "nat-00bf4813c95505abd",
            "network_interface_id": "eni-0ce50773e4a84c380",
            "private_ip": "10.0.1.189",
            "public_ip": "34.224.248.166",
            "subnet_id": "subnet-0b01d82a0fb758593",
            "tags": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.Prod01",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic-staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0fa38cdc6af32c507",
            "ipv6_address_count": 0,
            "mac_address": "12:a3:b7:f0:35:a7",
            "private_ip": "10.0.3.95",
            "private_ips": [
              "10.0.3.95"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04c4df901ca12ec34"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae075e35a719e5df"
          },
          "dependencies": [
            "aws_security_group.staging_internal",
            "aws_subnet.staging",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server01-nic-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0f3cff9972a050d8c",
                "device_index": 0,
                "instance": "i-06802b3db705f2ff6"
              }
            ],
            "id": "eni-06922bc2b012dfec8",
            "ipv6_address_count": 0,
            "mac_address": "0e:df:a7:93:5e:ef",
            "private_ip": "10.0.1.103",
            "private_ips": [
              "10.0.1.103"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05c95d0dc08bc3a6b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b01d82a0fb758593"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.Prod01",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server02-nic-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-09dfb0a1e5b96f01c",
                "device_index": 0,
                "instance": "i-03ca10908d4954a99"
              }
            ],
            "id": "eni-030aa73c60c5d343f",
            "ipv6_address_count": 0,
            "mac_address": "02:2b:be:27:9c:fd",
            "private_ip": "10.0.2.186",
            "private_ips": [
              "10.0.2.186"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-05c95d0dc08bc3a6b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025b700b1a8166f64"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.Prod02",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c4dce81c9ed1da39",
            "owner_id": "269396186723",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014505bf29720013f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CSRouteTable"
            },
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "StagingRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00b3120034556e45e",
            "owner_id": "269396186723",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00bf4813c95505abd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "StagingRouteTable"
            },
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6dede7099733166",
            "route_table_id": "rtb-0c4dce81c9ed1da39",
            "subnet_id": "subnet-0b01d82a0fb758593"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RouteTable",
            "aws_subnet.Prod01",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eae0b250d9f74705",
            "route_table_id": "rtb-0c4dce81c9ed1da39",
            "subnet_id": "subnet-025b700b1a8166f64"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RouteTable",
            "aws_subnet.Prod02",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09813edb61819ad1c",
            "route_table_id": "rtb-00b3120034556e45e",
            "subnet_id": "subnet-0ae075e35a719e5df"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.StagingRouteTable",
            "aws_subnet.Prod01",
            "aws_subnet.staging",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269396186723:security-group/sg-05c95d0dc08bc3a6b",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c95d0dc08bc3a6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "269396186723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269396186723:security-group/sg-020f7bcd1d3aa89d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020f7bcd1d3aa89d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-example-elb",
            "name_prefix": "",
            "owner_id": "269396186723",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "staging_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269396186723:security-group/sg-04c4df901ca12ec34",
            "description": "Allow internal traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c4df901ca12ec34",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "web from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_internal",
            "name_prefix": "",
            "owner_id": "269396186723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269396186723:subnet/subnet-0b01d82a0fb758593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b01d82a0fb758593",
            "map_public_ip_on_launch": true,
            "owner_id": "269396186723",
            "tags": {
              "Name": "Prod01"
            },
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prod02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269396186723:subnet/subnet-025b700b1a8166f64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-025b700b1a8166f64",
            "map_public_ip_on_launch": true,
            "owner_id": "269396186723",
            "tags": {
              "Name": "Prod02"
            },
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269396186723:subnet/subnet-0ae075e35a719e5df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ae075e35a719e5df",
            "map_public_ip_on_launch": false,
            "owner_id": "269396186723",
            "tags": {
              "Name": "staging"
            },
            "vpc_id": "vpc-0a8aa03ce1d10ccd0"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269396186723:vpc/vpc-0a8aa03ce1d10ccd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e88ced086e3fd6c",
            "default_route_table_id": "rtb-0845b7eb5b593dc50",
            "default_security_group_id": "sg-0fb447c54c48e989c",
            "dhcp_options_id": "dopt-d4942dae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a8aa03ce1d10ccd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0845b7eb5b593dc50",
            "owner_id": "269396186723",
            "tags": {
              "Name": "ContentSquare"
            }
          }
        }
      ]
    }
  ]
}